k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-pass-api
  namespace: mlops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-pass
  template:
    metadata:
      labels:
        app: student-pass
    spec:
      containers:
        - name: api
          image: ghcr.io/berrouyne/mlops-student-pass:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
