k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-pass-ingress
  namespace: mlops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - student.berrouyne.space
      secretName: student-pass-tls
  rules:
    - host: student.berrouyne.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-pass-svc
                port:
                  number: 80
